# auto-theme.nvim

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  build.sh  rustfmt.toml
.github/workflows/: ci.yml
colors/: auto-theme-dark.lua  auto-theme-light.lua  auto-theme.lua
lua/auto-theme/: colors.lua  end_4.lua  fetch.lua  highlights.lua  init.lua  material-you.lua  palette.lua  terminal.lua  types.lua
lua/auto-theme/derive-palette/: celebi.lua  color.lua  maths.lua  wsmeans.lua  wu.lua
lua/barbecue/theme/: auto-theme.lua
lua/lualine/themes/: auto-theme.lua
material-you-derive-palette/: args.rs  colors.rs  functions.rs  lib.rs  utils.rs
material-you-derive-palette/wallpaper/: linux.rs  mod.rs  unsupported.rs
