[package]
name = "material-you-derive-palette"
version = "0.1.0"
edition = "2024"

[lib]
path = "material-you-derive-palette/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11.2", features = ["luajit", "module", "anyhow"] }
image = "0.25.6"
anyhow = "1.0.99"
material-colors = { version = "0.4.2" }
dirs = "6.0.0"

[profile.release]
lto = true
strip = true
